--- a/react-ui/src/Header.css
+++ b/react-ui/src/Header.css
@@ -1,10 +1,13 @@
 .Header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 50px;
+  padding: 25px 0 0 0;
   color: white;
 }
 
 .App-title{
-	font-size: large;
+  font-size: 24px;
+  margin: 0 0 30px 0;
+  letter-spacing: 2px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
