--- a/react-ui/src/Header.css
+++ b/react-ui/src/Header.css
@@ -1,13 +1,19 @@
 .Header {
-  background-color: #222;
+  background-color: #1a237e;
   height: 50px;
-  padding: 25px 0 0 0;
+  margin: 0;
   color: white;
+  top: 0;
+  position: sticky;
 }
 
-.App-title{
+.app-title{
   font-size: 24px;
-  margin: 0 0 30px 0;
+  margin: 4px 0 0 0;
   letter-spacing: 2px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.search-bar {
+  margin: 8px 0 0 0;
 }
